# shellac-server

./: .gitignore  .gitlab-ci.yml  CLAP.orig  CLAP.proposed  Cargo.toml  LICENSE  README.md  flake.nix  shellac.capnp
completion/: README.md  git-add.shellac  git.shellac
members/shellac-codec/: Cargo.toml  build.rs
members/shellac-codec/src/: lib.rs
members/shellac-json/: Cargo.toml
members/shellac-json/src/: main.rs
src/: codec.rs  completion.rs  errors.rs  json.rs  lib.rs  main.rs  parser.rs  types.rs
tests/: expected
