[package]
name = "shellac-server"
version = "0.1.0"
authors = ["Xavier L'Heureux <xavier.lheureux@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0" # Temporary, only while not scheme is defined
capnp = "0.10"
structopt = "0.2"
retain_mut = "0.1"
combine = "3"
itertools = "0.8"
lru = "0.1"

[build-dependencies]
capnpc = "0.10"
