[package]
name = "shellac-server"
version = "0.2.0"
authors = ["Xavier L'Heureux <xavier.lheureux@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shellac"
path = "src/codec.rs"

# cargo build --features json
[[bin]]
name = "shellac-json"
path = "src/bin/json.rs"
required-features = ["json"]

# cargo build
[[bin]]
name = "shellac"
path = "src/bin/main/mod.rs"

[dependencies]
regex = "1.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = { version = "1.0", optional = true }
capnp = "0.10"
structopt = "0.2"
combine = "3"
itertools = "0.8"
lru = "0.1"

[dev-dependencies]
assert_cmd = "0.11"


[build-dependencies]
capnpc = "0.10"

[features]
json = ["serde_json"]
