[package]
name = "shellac-codec"
version = "0.2.0"
authors = ["Xavier L'Heureux <xavier.lheureux@icloud.com>"]
edition = "2018"
license = "MIT"
description = "Shell-Agnostic Completion server: Codec definition for interaction with ShellAC"
repository = "https://gitlab.redox-os.org/AdminXVII/shellac-server"
readme = "README.md"
keywords = ["shellac", "autocompletion", "shell", "ShellAC", "CLI"]
categories = ["command-line-interface", "command-line-utilities", "config"]
maintenance = { status = "experimental" }

[dependencies]
capnp = "0.10"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
capnpc = "0.10"
